# django-app-template

./: .coverage  .gitignore  Dockerfile  Dockerfile.test  Procfile  README.md  docker-compose.yml  local.env  makefile  pyproject.toml
app/: __init__.py  settings.py  tasks.py
tests/: conftest.py  test_tasks.py
