[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.1.2",
    "honcho>=2.0.0",
    "ipdb>=0.13.13",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "granian>=1.6.1",
    "whitenoise>=6.7.0",
    "procrastinate>=2.14.1",
    "psycopg>=3.2.3",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mixer>=7.2.2",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]


[tool.ruff]
exclude = ["migrations", "tests", ".venv"]
include = ["pyproject.toml", "app/**/*.py"]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = false
addopts = "-v --show-capture=no -q -p no:warnings --failed-first --new-first --no-cov-on-fail -v --cov=app/ --cov-report=term-missing"
markers = ["django_db"]
DJANGO_SETTINGS_MODULE = "app.settings"
